# python-package-example

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  CONTRIBUTING.md  README.md  pytest.ini  requirements-test.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/_static/: .keep
src/module1/: __init__.py  coverage_example.py  module1_entry_points.py  mypy_examples.py
tests/: test_coverage_example.py  test_package.py  test_unittests.py
