[metadata]
name = python-package-example
version = 0.1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = wagnerd
author_email = mail@wagnerd.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires = 
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    ; Can be used like "module1-main.exe entry1"
    module1-main = module1.module1_entry_points:main 
    ; Can be used like "module1-entry_one.exe"
    module1-entry_one = module1.module1_entry_points:entry_one

[options.packages.find]
where = src
exclude =
    tests*
    testing*
